# Algoritmos

./: .gitignore  CMakeLists.txt  README.md
Lista01/: B-RetanguloPerimetro.cpp
Listas/: CMakeLists.txt
Listas/Lista01/A-SomaSimples/: Q1.cpp  main
Listas/Lista01/C-AreaCirculo/: Q3.cpp  main.cpp
Listas/Lista01/D-DistanciaPostes/: Q4.cpp
Listas/Lista01/E-Divisores/: Q5.cpp
Listas/Lista01/F-Primos/: Q6.cpp
Listas/Lista01/G-Coprimos/: Q7.cpp
Listas/Lista04-big-oh/C-MaiorDiferenca/: Q3.cpp
Listas/Lista04-big-oh/D-MaiorContigua/: Q4.cpp
Listas/Lista04-big-oh/E-SomaPares/: Q5.cpp
Listas/Lista04-big-oh/H-Virus/: Q8.cpp
Listas/Lista04-big-oh/I-MeiaVida/: Q9.cpp
Listas/Lista04-big-oh/J-RepeticaoArray/: Q10.cpp
Listas/Lista08-VetorDinamico/A-LerNumeros/: Q1.cpp
Listas/Lista08-VetorDinamico/B-RetonarValorDeIndice/: Q2.cpp
Listas/Lista08-VetorDinamico/D-TamanhoLogico/: Q4.cpp
Listas/Lista08-VetorDinamico/E-CompararNumeros/: Q5  Q5.cpp
Listas/Lista08-VetorDinamico/F-AdicionarVetor/: Q6.cpp
Listas/Lista09-ListaLigada/A-VetorLigado/: Q1.cpp
Listas/Lista09-ListaLigada/B-InsertAfter/: Q2  Q2.cpp
Listas/Lista09-ListaLigada/C-RemoçãoIndiceValor/: Q3  Q3.cpp
Listas/Lista09-ListaLigada/D-MoverMenorPrimeiro/: Q4  Q4.cpp
Listas/Lista09-ListaLigada/E-CompararValoresEntreListas/: Q5  Q5.cpp
Listas/Lista10-Backtracking01-Labirinto/A-CaminhoValido/: Q1  Q1.cpp
Listas/Lista10-Backtracking01-Labirinto/B-QtdCaminhosValidos/: Q2  Q2.cpp
Listas/Lista10-Backtracking01-Labirinto/C-MenorCaminho/: Q3.cpp
Listas/Lista10-Backtracking01-Labirinto/D-DiferentesCelulas/: Q4  Q4.cpp
Listas/Lista10-Backtracking01-Labirinto/E-MenorDificuldade/: Q5  Q5.cpp
Listas/Lista11-Backtracking02-Sublista/A-SublistaDeSomaS/: Q1  Q1.cpp
Listas/Lista11-Backtracking02-Sublista/B-QtdSubilistasSomaS/: Q2  Q2.cpp
Listas/Lista11-Backtracking02-Sublista/C-ElementosSublista/: Q3  Q3.cpp
Listas/Listas-Extras/Ordenacao-Vetores/: ordenacao.cpp  run_testes.sh  teste_ordenacao
Listas/Listas-Extras/Ordenacao-Vetores/resultados/: caso01.csv  caso02.csv  caso03.csv  caso04.csv  caso05.csv
Listas/Listas-Extras/QuestaoProva/: QX  QX.cpp
PraticaLivre/PrimeiroPrograma/: CMakeLists.txt  main  main.cpp
PraticaLivre/VetorDinamico/: main.cpp
